--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.3.1</version>
+
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.tinqinacademy</groupId>
@@ -14,21 +15,13 @@
     <packaging>pom</packaging>
     <name>hotel-api</name>
     <description>hotel-api</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+
     <properties>
         <java.version>21</java.version>
+        <revision>0.0.1-SNAPSHOT</revision>
+        <model.version>4.0.0</model.version>
+        <group.id>com.tinqinacademy</group.id>
+        <module.version>0.0.1-SNAPSHOT</module.version>
     </properties>
     <dependencies>
         <dependency>
