--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <model.version>4.0.0</model.version>
         <group.id>com.tinqinacademy</group.id>
         <module.version>0.0.1-SNAPSHOT</module.version>
+        <jackson.version>2.17.1</jackson.version>
     </properties>
     <dependencies>
         <dependency>
