--- a/api/pom.xml
+++ b/api/pom.xml
@@ -3,6 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>api</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
     <parent>
         <groupId>com.tinqinacademy</groupId>
