--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -19,13 +19,12 @@
             <version>${revision}</version>
         </dependency>
         <dependency>
-            <groupId>${group.id}</groupId>
-            <artifactId>api</artifactId>
-            <version>${revision}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
