--- a/exceptionhandler/pom.xml
+++ b/exceptionhandler/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.tinqinacademy</groupId>
         <artifactId>hotel</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
 
