--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,10 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.3.1</version>
 
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.tinqinacademy</groupId>
     <artifactId>hotel</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
     <name>hotel-api</name>
     <description>hotel-api</description>
