--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.tinqinacademy</groupId>
         <artifactId>hotel</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
