--- a/persistence/src/main/resources/application.properties
+++ b/persistence/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
+#spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.url=jdbc:postgresql://db:5432/mydb
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
