--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,8 +1,16 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.url=jdbc:postgresql://localhost:5432/hotel
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=none
 
-server.port=443
+spring.datasource.url=jdbc:postgresql://localhost:5433/mydb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+logging.level.org.springframework.jdbc.core=DEBUG
+logging.level.org.springframework.jdbc.datasource=DEBUG
