--- a/core/pom.xml
+++ b/core/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>persistence</artifactId>
             <version>${revision}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
     </dependencies>
 
 
