--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -10,7 +10,11 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 
-logging.level.org.springframework.jdbc.core=DEBUG
-logging.level.org.springframework.jdbc.datasource=DEBUG
+#logging.level.org.springframework.jdbc.core=DEBUG
+#logging.level.org.springframework.jdbc.datasource=DEBUG
+
+#logging.level.org.springframework=DEBUG
