--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -5,13 +5,25 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto=none
 
+#DB
 spring.datasource.url=jdbc:postgresql://localhost:5433/mydb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+#Flyway
+spring.flyway.locations=classpath:db/migration
+spring.flyway.url=jdbc:postgresql://localhost:5433/mydb
+spring.flyway.user=postgres
+spring.flyway.password=postgres
+spring.flyway.enabled=true
+spring.flyway.group=true
+logging.level.org.flywaydb=DEBUG
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
 
 
 #logging.level.org.springframework.jdbc.core=DEBUG
