--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #Flyway
@@ -19,7 +19,7 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.url=jdbc:postgresql://localhost:5433/mydb
 spring.flyway.user=postgres
 spring.flyway.password=postgres
-spring.flyway.enabled=true
+spring.flyway.enabled=false
 spring.flyway.group=true
 logging.level.org.flywaydb=DEBUG
 spring.flyway.baseline-on-migrate=true
