Move jsonpatch dependency to api module

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -11,6 +11,11 @@
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>com.github.java-json-tools</groupId>
+            <artifactId>json-patch</artifactId>
+            <version>${jsonpatch.version}</version>
+        </dependency>
     </dependencies>
 
 
