--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <group.id>com.tinqinacademy</group.id>
         <jackson.version>2.17.1</jackson.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <jsonpatch.version>1.13</jsonpatch.version>
     </properties>
     <dependencies>
 
@@ -41,11 +42,6 @@
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.github.java-json-tools</groupId>
-            <artifactId>json-patch</artifactId>
-            <version>1.13</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
