--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <jackson.version>2.17.1</jackson.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <jsonpatch.version>1.13</jsonpatch.version>
+        <hibernatecore.version>6.4.2.Final</hibernatecore.version>
+        <flywaypostgres.version>10.15.0</flywaypostgres.version>
     </properties>
     <dependencies>
 
