--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,7 +17,11 @@
             <artifactId>persistence</artifactId>
             <version>${revision}</version>
         </dependency>
-
+        <dependency>
+            <groupId>${group.id}</groupId>
+            <artifactId>api</artifactId>
+            <version>${revision}</version>
+        </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
