--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,7 +10,6 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>core</artifactId>
-<!--    <version>0.0.1-SNAPSHOT</version>-->
 
     <dependencies>
         <dependency>
@@ -18,7 +17,11 @@
             <artifactId>persistence</artifactId>
             <version>${revision}</version>
         </dependency>
-
+        <dependency>
+            <groupId>${group.id}</groupId>
+            <artifactId>api</artifactId>
+            <version>${revision}</version>
+        </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
