--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -12,12 +12,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>${group.id}</groupId>
-            <artifactId>api</artifactId>
-            <version>${revision}</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
@@ -25,7 +19,7 @@
         <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>6.4.2.Final</version>
+            <version>${hibernatecore.version}</version>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
@@ -34,7 +28,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-database-postgresql</artifactId>
-            <version>10.15.0</version>
+            <version>${flywaypostgres.version}</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
