--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,9 @@
         <group.id>com.tinqinacademy</group.id>
         <jackson.version>2.17.1</jackson.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <jsonpatch.version>1.13</jsonpatch.version>
+        <hibernatecore.version>6.4.2.Final</hibernatecore.version>
+        <flywaypostgres.version>10.15.0</flywaypostgres.version>
     </properties>
     <dependencies>
 
@@ -41,11 +44,6 @@
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.github.java-json-tools</groupId>
-            <artifactId>json-patch</artifactId>
-            <version>1.13</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -74,7 +72,6 @@
                 <configuration>
                 </configuration>
                 <executions>
-                    <!-- enable flattening -->
                     <execution>
                         <id>flatten</id>
                         <phase>process-resources</phase>
@@ -82,7 +79,6 @@
                             <goal>flatten</goal>
                         </goals>
                     </execution>
-                    <!-- ensure proper cleanup -->
                     <execution>
                         <id>flatten.clean</id>
                         <phase>clean</phase>
@@ -92,28 +88,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-<!--            <plugin>-->
-<!--                <groupId>org.apache.maven.plugins</groupId>-->
-<!--                <artifactId>maven-compiler-plugin</artifactId>-->
-<!--                <version>3.11.0</version>-->
-<!--                <configuration>-->
-<!--                    <source>${java.version}</source>-->
-<!--                    <target>${java.version}</target>-->
-<!--                    <annotationProcessorPaths>-->
-<!--                        <path>-->
-<!--                            <groupId>org.projectlombok</groupId>-->
-<!--                            <artifactId>lombok</artifactId>-->
-<!--                            <version>${lombok.version}</version>-->
-<!--                        </path>-->
-<!--                        <path>-->
-<!--                            <groupId>org.mapstruct</groupId>-->
-<!--                            <artifactId>mapstruct-processor</artifactId>-->
-<!--                            <version>${mapstruct.version}</version>-->
-<!--                        </path>-->
-<!--                    </annotationProcessorPaths>-->
-<!--                </configuration>-->
-<!--            </plugin>-->
         </plugins>
     </build>
 
