--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,21 +14,8 @@ services:
       - hotel
     volumes:
       - postgres_data:/var/lib/postgresql/data
-#      - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
-  commentdb:
-    container_name: commentdb
-    image: postgres
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: commentdb
-    ports:
-      - "5434:5432"
-    networks:
-      - hotel
-    volumes:
-      - comment_data:/var/lib/postgresql/data
 
 
   pgadmin:
@@ -53,4 +40,3 @@ networks:
 volumes:
   pgadmin_data:
   postgres_data:
-  comment_data:
