--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
         <jsonpatch.version>1.13</jsonpatch.version>
         <hibernatecore.version>6.4.2.Final</hibernatecore.version>
         <flywaypostgres.version>10.15.0</flywaypostgres.version>
+        <vavr.version>0.10.4</vavr.version>
+        <vavrjackson.version>0.10.3</vavrjackson.version>
     </properties>
     <dependencies>
 
@@ -60,6 +62,16 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr</artifactId>
+            <version>${vavr.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.vavr</groupId>
+            <artifactId>vavr-jackson</artifactId>
+            <version>${vavrjackson.version}</version>
         </dependency>
     </dependencies>
 
