--- a/api/pom.xml
+++ b/api/pom.xml
@@ -16,6 +16,10 @@
             <artifactId>json-patch</artifactId>
             <version>${jsonpatch.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
 
     </dependencies>
 
