--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <flywaypostgres.version>10.15.0</flywaypostgres.version>
         <vavr.version>0.10.4</vavr.version>
         <vavrjackson.version>0.10.3</vavrjackson.version>
+        <feign.version>4.1.3</feign.version>
     </properties>
     <dependencies>
 
@@ -72,6 +73,11 @@
             <groupId>io.vavr</groupId>
             <artifactId>vavr-jackson</artifactId>
             <version>${vavrjackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>${feign.version}</version>
         </dependency>
     </dependencies>
 
