--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>core</module>
         <module>persistence</module>
         <module>domain</module>
+        <module>restexport</module>
     </modules>
 
     <properties>
