--- a/core/pom.xml
+++ b/core/pom.xml
@@ -10,6 +10,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>core</artifactId>
+    <groupId>com.tinqinacademy.hotel</groupId>
 
     <dependencies>
         <dependency>
