Remove redundant group id

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.tinqinacademy.hotel</groupId>
 
     <parent>
-        <groupId>com.tinqinacademy</groupId>
+        <groupId>com.tinqinacademy.hotel</groupId>
         <artifactId>hotel</artifactId>
         <version>${revision}</version>
     </parent>
