--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>3.3.1</version>
 
     </parent>
-    <groupId>com.tinqinacademy</groupId>
+    <groupId>com.tinqinacademy.hotel</groupId>
     <artifactId>hotel</artifactId>
     <version>${revision}</version>
     <packaging>pom</packaging>
