Add missing spring application name

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -30,6 +30,8 @@ spring.boot.admin.client.url=http://localhost:8084/api/v1/admin
 
 
 
+spring.application.name=hotel
+
 #logging.level.org.springframework.jdbc.core=DEBUG
 #logging.level.org.springframework.jdbc.datasource=DEBUG
 
