--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -25,6 +25,12 @@ logging.level.org.flywaydb=DEBUG
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
 
+#ADMIN
+spring.boot.admin.client.url=http://localhost:8084/api/v1/admin
+
+
+
+spring.application.name=hotel
 
 #logging.level.org.springframework.jdbc.core=DEBUG
 #logging.level.org.springframework.jdbc.datasource=DEBUG
