--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,6 @@
         <vavrjackson.version>0.10.3</vavrjackson.version>
         <feign.version>4.1.3</feign.version>
         <spring-boot-admin.version>3.3.2</spring-boot-admin.version>
-
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -54,14 +53,6 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
-
-
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-devtools</artifactId>-->
-<!--            <scope>runtime</scope>-->
-<!--            <optional>true</optional>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -97,7 +88,15 @@
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-client</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.17.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
