--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -6,7 +6,7 @@
 #spring.jpa.hibernate.ddl-auto=none
 
 #DB
-spring.datasource.url=jdbc:postgresql://localhost:5433/mydb
+spring.datasource.url=jdbc:postgresql://db:5432/mydb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -16,15 +16,15 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #Flyway
-spring.flyway.locations=classpath:db/migration
-spring.flyway.url=jdbc:postgresql://localhost:5433/mydb
-spring.flyway.user=postgres
-spring.flyway.password=postgres
+#spring.flyway.locations=classpath:db/migration
+#spring.flyway.url=jdbc:postgresql://localhost:5433/mydb
+#spring.flyway.user=postgres
+#spring.flyway.password=postgres
 spring.flyway.enabled=false
-spring.flyway.group=true
-logging.level.org.flywaydb=DEBUG
-spring.flyway.baseline-on-migrate=true
-spring.flyway.baseline-version=0
+#spring.flyway.group=true
+#logging.level.org.flywaydb=DEBUG
+#spring.flyway.baseline-on-migrate=true
+#spring.flyway.baseline-version=0
 
 #ADMIN
 spring.boot.admin.client.url=http://localhost:8084/api/v1/admin
