--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -27,10 +27,7 @@ spring.flyway.enabled=false
 #spring.flyway.baseline-version=0
 
 #ADMIN
-spring.boot.admin.client.url=http://localhost:8084/api/v1/admin
-
-
-
+spring.boot.admin.client.url=http://admin-app:8084/api/v1/admin
 spring.application.name=hotel
 
 #logging.level.org.springframework.jdbc.core=DEBUG
