Enable flyway migrations

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -11,20 +11,20 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #Flyway
-#spring.flyway.locations=classpath:db/migration
-#spring.flyway.url=jdbc:postgresql://localhost:5433/mydb
-#spring.flyway.user=postgres
-#spring.flyway.password=postgres
-spring.flyway.enabled=false
-#spring.flyway.group=true
-#logging.level.org.flywaydb=DEBUG
-#spring.flyway.baseline-on-migrate=true
-#spring.flyway.baseline-version=0
+spring.flyway.locations=classpath:db/migration
+spring.flyway.url=jdbc:postgresql://db:5432/mydb
+spring.flyway.user=postgres
+spring.flyway.password=postgres
+spring.flyway.enabled=true
+spring.flyway.group=true
+logging.level.org.flywaydb=DEBUG
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=0
 
 #ADMIN
 spring.boot.admin.client.url=http://admin-app:8084/api/v1/admin
