--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>persistence</module>
         <module>domain</module>
         <module>restexport</module>
+        <module>restexportprocessor</module>
     </modules>
 
     <properties>
