--- a/restexportprocessor/pom.xml
+++ b/restexportprocessor/pom.xml
@@ -18,6 +18,11 @@
             <version>1.13.0</version>
         </dependency>
         <dependency>
+            <groupId>com.tinqinacademy.hotel</groupId>
+            <artifactId>api</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
